--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,32 +11,30 @@
   <link rel="icon" type="image/x-icon" href="{{ '/favicon.ico' | relative_url }}">
 </head>
 <body>
-  <div class="container">
-    <div class="sidebar">
-      <h2>Publications</h2>
-      <ul>
-        {% if site.publications %}
-        {% for pub in site.publications %}
-        <li>{{ pub.title }} (<a href="{{ pub.url }}">Link</a>)</li>
-        {% endfor %}
-        {% else %}
-        <li>No publications yet.</li>
-        {% endif %}
-      </ul>
-      <h2>Hobbies</h2>
-      <ul>
-        {% if site.hobbies %}
-        {% for hobby in site.hobbies %}
-        <li>{{ hobby }}</li>
-        {% endfor %}
-        {% else %}
-        <li>No hobbies listed.</li>
-        {% endif %}
-      </ul>
-    </div>
-    <div class="main-content">
-      {{ content }}
-    </div>
+  <div class="main-content">
+    {{ content }}
+  </div>
+  <div class="additional-sections">
+    <h2>Publications</h2>
+    <ul>
+      {% if site.publications %}
+      {% for pub in site.publications %}
+      <li>{{ pub.title }} (<a href="{{ pub.url }}">Link</a>)</li>
+      {% endfor %}
+      {% else %}
+      <li>No publications yet.</li>
+      {% endif %}
+    </ul>
+    <h2>Hobbies</h2>
+    <ul>
+      {% if site.hobbies %}
+      {% for hobby in site.hobbies %}
+      <li>{{ hobby }}</li>
+      {% endfor %}
+      {% else %}
+      <li>No hobbies listed.</li>
+      {% endif %}
+    </ul>
   </div>
 </body>
 </html>
